--- a/www/profile_visitato_from_navigation.html
+++ b/www/profile_visitato_from_navigation.html
@@ -17,27 +17,32 @@
 
 					  	<ul class="table-view pulito ">
 						<li class="table-view-cell pulito">
+					    <a>  
 					      <span class="media-object pull-left icon icon-gear"></span>
 					      <div class="media-body">
 					        Stato Corrente: a lezione
 					      </div>
+						</a>
 						</li>
 
 						<li class="table-view-cell pulito">
+					    <a>
 					    	<span class="media-object pull-left icon icon-pages"></span>
 					      	<div class="media-body">
 					        Posizione: coppito-blocco 1-piano 2
 					      	</div>
-
+						</a>
 						</li>
 						</ul>
 
 						<ul class="table-view pulito ">
 						  <li class="table-view-cell pulito">
+					    <a>	
 					    	<span class="media-object pull-left icon icon-pages"></span>
 					      	<div class="media-body">
 					        Polo apparteneza: Coppito
 					      	</div>
+					     </a> 	
 						 </li>
 						 <li class="table-view-cell pulito">
 							<a class="navigate-right"  href="#" data-transition="slide">
@@ -49,7 +54,9 @@
 						</li>
 						</ul>
 						<ul class="table-view pulito ">
+						 	
 						 	<li class="table-view-cell pulito">
+							<a>
 								<span class="media-object pull-left icon icon-pages"></span>
 					     		<div class="media-body">
 					       			Ricevi Notifiche Intelligenti
@@ -57,9 +64,10 @@
 								<div class="toggle">
 									<div class="toggle-handle"></div>
 								</div>
+							</a>
 							</li>
 							<li class="table-view-cell pulito">
-							<a class="navigate-right"  href="notifiche_follower_navigation.html" data-transition="slide">
+							<a class="navigate-right"  data-ignore="push" href="notifiche_follower_navigation.html" data-transition="slide">
 						    	<span class="media-object pull-left icon icon-pages"></span>
 						      	<div class="media-body">
 						        Scegli notifiche
