add cambia status

--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
 	        $.mobile.pushStateEnabled = false;
 	    	});
 		</script>
-		
+
 		<link href="css/accordion.css" rel="stylesheet">
 
   	</head>
@@ -149,7 +149,7 @@
 	  			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
-				<a class="tab-item" data-ignore="push" href="profile.html">
+				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
 					<span class="icon icon-compose"></span>
 				</a>
 
@@ -171,5 +171,5 @@
 			</nav>
 
   	</body>
-	
+
 </html>
