--- a/www/listaFollowers.html
+++ b/www/listaFollowers.html
@@ -41,7 +41,7 @@
 		<header class="bar bar-nav">
 		<h1 id= "titleNavigation" class="titleNavigation">Followers</h1>
 		</header>
-		
+
 		<div id="filtrofollower" class="content">
 
 			<div class="filter bar bar-standard bar-header-secondary">
@@ -53,16 +53,16 @@
 
 			<!-- Lista follower Amici -->
 			<div id="lista">
-			
+
 			<script src="js/filtrofollower.js"></script>
 		<link href="css/followers.css" rel="stylesheet">
-	
+
 			</div>
 			<nav class="bar bar-tab">
-	  			<a class="tab-item active " data-ignore="push" href="index.html">
+	  			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
-				<a class="tab-item " data-ignore="push" href="profile.html">
+				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
 					<span class="icon icon-compose"></span>
 				</a>
 
@@ -71,7 +71,7 @@
 						<img src="img/notifiche.png" class="followersImage">
 					</span>
 				</a>
-				<a class="tab-item tab-item-selected" data-ignore="push" href="listaFollowers.html">
+				<a class="tab-item" data-ignore="push" href="listaFollowers.html">
 					<span class="media-object">
 						<img src="img/followers.png" class="followersImage">
 					</span>
@@ -84,6 +84,6 @@
 			</nav>
 
 
-		
+
   	</body>
 </html>
