--- a/www/selezionaProfAvvistamento.html
+++ b/www/selezionaProfAvvistamento.html
@@ -75,7 +75,7 @@
 	  			<a class="tab-item active " data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
-				<a class="tab-item " data-ignore="push" href="profile.html">
+				<a class="tab-item " data-ignore="push" href="cambiaStatus.html">
 					<span class="icon icon-compose"></span>
 				</a>
 
