--- a/www/cambiaStatus.html
+++ b/www/cambiaStatus.html
@@ -39,7 +39,6 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<a class="icon icon-left-nav pull-left" href="selezionaProfAvvistamento.html"></a>
   			<h2 id="titleNavigation">Cambia Status</h2>
 		</header>
 
@@ -59,30 +58,31 @@
 				</ul>
 		</div>
 		<!-- Tab Bar -->
-		<nav class="bar bar-tab">
-  			<a class="tab-item" href="#">
-    			<span class="icon icon-home"></span>
-    			<span class="tab-label">Home</span>
-  			</a>
-			<a class="tab-item" href="#">
-				<span class="icon icon-person"></span>
-			    <span class="tab-label">Profilo</span>
-			</a>
-			<a class="tab-item" href="#">
-				<span class="icon icon-search"></span>
-			    <span class="tab-label">Cerca</span>
-			</a>
-			<a class="tab-item active" href="#">
-				<span class="media-object">
-					<img src="img/followers.png" class="followersImage">
-				</span>
-			    <span class="tab-label">Followers</span>
-			</a>
-			<a class="tab-item" href="#">
-				<span class="icon icon-bars"></span>
-			    <span class="tab-label">Menu</span>
-			</a>
-		</nav>
+
+					<nav class="bar bar-tab">
+			  			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
+			    			<span class="icon icon-home"></span>
+			  			</a>
+						<a class="tab-item" data-ignore="push" href="profile.html">
+							<span class="icon icon-compose"></span>
+						</a>
+
+						<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
+							<span class="media-object">
+								<img src="img/notifiche.png" class="followersImage">
+							</span>
+						</a>
+						<a class="tab-item" data-ignore="push" href="listaFollowers.html">
+							<span class="media-object">
+								<img src="img/followers.png" class="followersImage">
+							</span>
+						</a>
+						<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
+							<span class="media-object">
+								<img src="img/profMirino.png" class="followersImage">
+							</span>
+						</a>
+					</nav>
 		<script src="js/profWatch.js"></script>
 
   	</body>
