--- a/www/gestione_notifiche.html
+++ b/www/gestione_notifiche.html
@@ -77,29 +77,29 @@
 		</div>
 
 		<nav class="bar bar-tab">
-	  			<a class="tab-item active " data-ignore="push" href="index.html">
-	    			<span class="icon icon-home"></span>
-	  			</a>
-				<a class="tab-item " data-ignore="push" href="profile.html">
-					<span class="icon icon-compose"></span>
-				</a>
+			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
+				<span class="icon icon-home"></span>
+			</a>
+			<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
+				<span class="icon icon-compose"></span>
+			</a>
 
-				<a class="tab-item tab-item-selected" data-ignore="push" href="gestione_notifiche.html">
-					<span class="media-object">
-						<img src="img/notifiche.png" class="followersImage">
-					</span>
-				</a>
-				<a class="tab-item" data-ignore="push" href="listaFollowers.html">
-					<span class="media-object">
-						<img src="img/followers.png" class="followersImage">
-					</span>
-				</a>
-				<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
-					<span class="media-object">
-						<img src="img/profMirino.png" class="followersImage">
-					</span>
-				</a>
-			</nav>
+			<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
+				<span class="media-object">
+					<img src="img/notifiche.png" class="followersImage">
+				</span>
+			</a>
+			<a class="tab-item" data-ignore="push" href="listaFollowers.html">
+				<span class="media-object">
+					<img src="img/followers.png" class="followersImage">
+				</span>
+			</a>
+			<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
+				<span class="media-object">
+					<img src="img/profMirino.png" class="followersImage">
+				</span>
+			</a>
+		</nav>
 
   	</body>
 </html>
