--- a/www/index.html
+++ b/www/index.html
@@ -44,11 +44,11 @@
 		<!-- Title bar -->
 
 		<div class="snap-drawers">
-			<div id="menucanvas" class="snap-drawer snap-drawer-right">
+			<div id="menucanvas" class="snap-drawer snap-drawer-left">
 			</div>
 		</div>
 
-<div id="menu" class="content snap-content">
+		<div id="menu" class="content snap-content">
 
 		<div class="snap-drawers">
 			<div id="contentoffcanvas" class="snap-drawer snap-drawer-right">
@@ -57,7 +57,7 @@
 
 		<header class="bar bar-nav">
 			<a id="freccia_indietro" class="icon icon-left-nav pull-left"></a>
-			<a id="menu_btn" class="icon icon-gear pull-right"></a>
+			<a id="menu_btn" class="icon icon-bars pull-left"></a>
 			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
 
   			<h2 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h2>
