add widgets schermata

--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,8 @@
 
 		<link href="libs/SnapJs/snap.css" rel="stylesheet">
 
+
+
 		<link href="css/profile.css" rel="stylesheet">
 
     	<!-- Include the compiled Ratchet JS -->
@@ -149,7 +151,7 @@
 	  			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
-				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
+				<a class="tab-item" data-ignore="push" href="widgets.html">
 					<span class="icon icon-compose"></span>
 				</a>
 
@@ -169,6 +171,7 @@
 					</span>
 				</a>
 			</nav>
+			<link href="css/widgets.css" rel="stylesheet">
 
   	</body>
 
