--- a/www/widgets.html
+++ b/www/widgets.html
@@ -37,7 +37,7 @@
 		</script>
 
 		<link href="css/accordion.css" rel="stylesheet">
-
+        <link href="css/widgets.css" rel="stylesheet">
   	</head>
   	<body>
 		<!-- Title bar -->
@@ -63,9 +63,121 @@
 		</header>
 
 
-		<div id="contentmain" class="content snap-content hassubnav">
-			
+		<div id="contentmain" class="content snap-content hassubnav spazio-nav">
 
+
+			<div class="ui-grid-b ui-responsive">
+				 <div class="card">
+					widgets nofitiche
+				 </div>
+			</div>
+
+
+			<div class="ui-grid-b ui-responsive">
+			 	<div class="ui-block-a">
+					<div class="card">
+						<ul class="table-view">
+							<li class="table-view-cell media">
+							<a>	<div class="media-body">Costanzo Manes</div></a>
+							</li>
+					  		<li class="table-view-cell media">
+								<img class="media-object pull-left widgetImage" src="img/manes.jpg">
+					  		</li>
+
+							<li>
+								<span class="labelCard">Status: </span>
+								<span class="textCard">A lezione</span>
+							</li>
+							<li>
+								<span class="labelCard">Posizione: </span>
+								<span class="textCard">Coppito blocco 0</span>
+							</li>
+							<li>
+								<span class="labelCard">Ufficio: </span>
+								<span class="textCard">301</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+			 	<div class="ui-block-b">
+					<div class="card">
+						<ul class="table-view">
+							<li class="table-view-cell media">
+							<a>	<div class="media-body">Matteo Polsinelli</div></a>
+							</li>
+					  		<li class="table-view-cell media">
+								<img class="media-object pull-left widgetImage" src="img/matteo.jpg">
+					  		</li>
+
+							<li>
+								<span class="labelCard">Status: </span>
+								<span class="textCard">A lezione</span>
+							</li>
+							<li>
+								<span class="labelCard">Posizione: </span>
+								<span class="textCard">Coppito blocco 0</span>
+							</li>
+							<li>
+								<span class="labelCard">Aula: </span>
+								<span class="textCard">0.1</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<div class="ui-grid-b ui-responsive">
+			 	<div class="ui-block-a">
+					<div class="card">
+						<ul class="table-view">
+							<li class="table-view-cell media">
+							<a>	<div class="media-body">Matteo Polsinelli</div></a>
+							</li>
+					  		<li class="table-view-cell media">
+								<img class="media-object pull-left widgetImage" src="img/matteo.jpg">
+					  		</li>
+
+							<li>
+								<span class="labelCard">Status: </span>
+								<span class="textCard">A lezione</span>
+							</li>
+							<li>
+								<span class="labelCard">Posizione: </span>
+								<span class="textCard">Coppito blocco 0</span>
+							</li>
+							<li>
+								<span class="labelCard">Aula: </span>
+								<span class="textCard">0.1</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+			 	<div class="ui-block-b">
+					<div class="card">
+						<ul class="table-view">
+							<li class="table-view-cell media">
+							<a>	<div class="media-body">Aula 0.1</div></a>
+							</li>
+					  		<li class="table-view-cell media">
+								<img class="media-object pull-left widgetImage" src="img/aula.jpg">
+					  		</li>
+
+							<li>
+								<span class="labelCard">Status: </span>
+								<span class="textCard">Libera</span>
+							</li>
+							<li>
+								<span class="labelCard">Posizione: </span>
+								<span class="textCard">Coppito blocco 0</span>
+							</li>
+							<li>
+								<span class="labelCard">Ufficio: </span>
+								<span class="textCard">301</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 		<script src="js/navigation.js"></script>
 		</div>
