Da follower a following prima che me ne scordo di nuovo

--- a/www/cronologia_notifiche_followers.html
+++ b/www/cronologia_notifiche_followers.html
@@ -44,7 +44,7 @@
 			<div id="gestione_notifiche" class="content spazio-nav">
 			<div class="card">
 	  			<ul id="slippylist" class="table-view">
-	    			<li class="table-view-cell table-view-divider">Followers
+	    			<li class="table-view-cell table-view-divider">Following
 
 	    			<button id="cancella_notifiche" class="btn btn-negative btn_cancella">Cancella Notifiche</button>
 	    			</li>
