--- a/www/gestione_notifiche.html
+++ b/www/gestione_notifiche.html
@@ -47,14 +47,14 @@
 
     			   <a class="navigate-right" data-ignore="push" href="cronologia_notifiche_followers.html" data-transition="slide">
     			   <span class="badge">10</span>
-   				   POLO
+   				   POLI
     			   </a>
 			    </li>
                 <li class="table-view-cell">
 
                    <a class="navigate-right" data-ignore="push" href="cronologia_notifiche_followers.html" data-transition="slide">
                    <span class="badge">3</span>
-     				 EDIFICIO
+     				 EDIFICI
   				   </a>
 			  </li>
  		  	 <li class="table-view-cell">
@@ -62,7 +62,7 @@
    		 			 <a class="navigate-right" data-ignore="push" href="cronologia_notifiche_followers.html" data-transition="slide">
 
    		 			 <span class="badge">7</span>
-    				  FOLLOWERS
+    				  FOLLOWING
   					  </a>
 			  </li>
 			  <li class="table-view-cell">
