--- a/www/listaFollowers.html
+++ b/www/listaFollowers.html
@@ -39,7 +39,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-		<h1 id= "titleNavigation" class="titleNavigation">Followers</h1>
+		<h1 id= "titleNavigation" class="titleNavigation">Following</h1>
 		</header>
 
 		<div id="filtrofollower" class="content">
