--- a/www/menu.html
+++ b/www/menu.html
@@ -2,7 +2,7 @@
 			<ul class="table-view menu-color">
 			
 			<li class="table-view-cell media">
-				   <a id="close_menu" class="icon icon-left-nav pull-left">
+				   <a id="close_menu" class="icon icon-right-nav pull-left">
 				      
 				      <div id="menu-title" class="media-body pull-right">
 				        Menu
@@ -12,7 +12,7 @@
 			
 				<li class="table-view-cell media">
 				    <a class="navigate-right" data-ignore="push" href="profile.html">
-				      <span class="media-object pull-left icon icon-gear"></span>
+				      <span class="media-object pull-left icon icon-person"></span>
 				      <div class="media-body">
 				        Gestione Profilo
 				      </div>
@@ -20,15 +20,19 @@
 	  			</li>
 				<li class="table-view-cell media">
 				    <a class="navigate-right" data-ignore="push" href="lista_poli_per_gestione.html">
-				      <span class="media-object pull-left icon icon-gear"></span>
+					  <span class="media-object pull-left">
+						<img src="img/polo.png" class="followersImage  icone">
+					  </span>
 				      <div class="media-body">
 				        Gestione Poli
 				      </div>
 				    </a>
 				</li>
 				<li class="table-view-cell media">
-				    <a class="navigate-right">
-				      <span class="media-object pull-left icon icon-pages"></span>
+				    <a >
+				     <span class="media-object pull-left">
+						<img src="img/logout.png" class="followersImage icone">
+					</span>
 				      <div class="media-body">
 				        Logout
 				      </div>
@@ -36,3 +40,4 @@
 				</li>
 			</ul>
 		</div>
+		<link href="css/menu.css" rel="stylesheet">
