Tolte delle card e iniziato a stringere

--- a/www/FollowerAmici.html
+++ b/www/FollowerAmici.html
@@ -1,48 +1,48 @@
+<!DOCTYPE html>
 
-			<div class="card">
 	  			<ul class="table-view">
 	    			<li class="table-view-cell table-view-divider">Amici</li>
 	  				<li class="table-view-cell media">
-	    				<a href="profile_visitato.html" data-ignore="push" data-transition="slide" class="navigate-right frecciaProfilo">
+	    				<a href="profile_visitato.html" data-ignore="push" data-transition="slide" class="navigate-right frecciaProfilo stretto">
 		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 			      			<div class="media-body">Matteo Polsinelli</div>
 							<div>
-				        		<span class="labelCard">Status: </span>
+
 								<span class="textCard">A lezione</span>
 			      			</div>
 	    				</a>
 	  				</li>
 			  		<li class="table-view-cell media">
-			    		<a class="navigate-right">
+			    		<a class="navigate-right stretto">
 				      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
 							<div class="media-body">Davide Giancola</div>
 							<div>
-						        <span class="labelCard">Status: </span>
+
 								<span class="textCard">A lezione</span>
 					      	</div>
 			    		</a>
 			  		</li>
 			  		<li class="table-view-cell media">
-	    				<a class="navigate-right frecciaProfilo">
+	    				<a class="navigate-right frecciaProfilo stretto">
 		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 			      			<div class="media-body">Matteo Polsinelli</div>
 							<div>
-				        		<span class="labelCard">Status: </span>
+
 								<span class="textCard">A lezione</span>
 			      			</div>
 	    				</a>
 	  				</li>
 			  		<li class="table-view-cell media">
-			    		<a class="navigate-right">
+			    		<a class="navigate-right stretto">
 				      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
 							<div class="media-body">Davide Giancola</div>
 							<div>
-						        <span class="labelCard">Status: </span>
+
 								<span class="textCard">A lezione</span>
 					      	</div>
 			    		</a>
 			  		</li>
 	  			</ul>
-			</div>
+
 			
 			
