--- a/www/cronologia_notifiche_followers.html
+++ b/www/cronologia_notifiche_followers.html
@@ -42,128 +42,126 @@
 		</header>
 
 			<div id="gestione_notifiche" class="content spazio-nav">
-			<div class="card">
 	  			<ul id="slippylist" class="table-view">
 	    			<li class="table-view-cell table-view-divider">Following
 
 	    			<button id="cancella_notifiche" class="btn btn-negative btn_cancella">Cancella Notifiche</button>
 	    			</li>
 
+		  				<li id="notifica_1" class="table-view-cell notification-list no-reorder" data-role="listview">
 
-	  				<li id="notifica_1" class="table-view-cell notification-list no-reorder" data-role="listview">
+		    				 <div data-role="main" class="ui-content stretto">
 
-	    				 <div data-role="main" class="ui-content">
+	   						 <div class="ui-grid-b">
+	   			 					   <div class="ui-block-a ui-block-a-button immNotifica"><span>
+	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/matteo.jpg">
+	      								</span></div>
+	   								   <div class="ui-block-b ui-block-b-button">
+	    									  <span class="titolo-notifica">Matteo Polsinelli </span> <br>
 
-   						 <div class="ui-grid-b">
-   			 					   <div class="ui-block-a ui-block-a-button"><span>
-  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/matteo.jpg">
-      								</span></div>
-   								   <div class="ui-block-b ui-block-b-button">
-    									  <span class="titolo-notifica">Matteo Polsinelli </span> <br>
+							    			    <span class="testo-notifica">ha inviato una richiesta per seguirti </span>
+	    							  </div>
+	   								   <div class="ui-block-c ui-block-c-button">
+	   								   		<span class="center btncontainer">
+											<button class="btn btn_accetta">Accetta</button>
+											<button class="btn btn_rifiuta">Rifiuta</button>
+											</span>
+				      				  </div>
+	  					     </div>
+	 						 </div>
+					    </li>
 
-						    			    <span class="testo-notifica">ha inviato una richiesta per seguirti </span>
-    							  </div>
-   								   <div class="ui-block-c ui-block-c-button">
-   								   		<span class="center btncontainer">
-										<button class="btn btn_accetta">Accetta</button>
-										<button class="btn btn_rifiuta">Rifiuta</button>
-										</span>
-			      				  </div>
-  					     </div>
- 						 </div>
-				    </li>
+				  		<li id="notifica_2" class="table-view-cell notification-list ui-listview">
+				    	 <div data-role="main" class="ui-content stretto">
 
-			  		<li id="notifica_2" class="table-view-cell notification-list ui-listview">
-			    	 <div data-role="main" class="ui-content">
+	   						 <div class="ui-grid-b">
+	   			 					   <div class="ui-block-a"><span>
+	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+	      								</span></div>
+	   								   <div class="ui-block-b">
+	    										<span class="titolo-notifica">Davide Giancola</span> <br>
+							    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
+									   </div>
+	   								   <div class="ui-block-c">
 
-   						 <div class="ui-grid-b">
-   			 					   <div class="ui-block-a"><span>
-  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
-      								</span></div>
-   								   <div class="ui-block-b">
-    										<span class="titolo-notifica">Davide Giancola</span> <br>
-						    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
-								   </div>
-   								   <div class="ui-block-c">
+				      				  </div>
+	  					     </div>
+	 						 </div>
+				  		</li>
 
-			      				  </div>
-  					     </div>
- 						 </div>
-			  		</li>
+				  		<li id="notifica_3" class="table-view-cell notification-list ui-listview">
+				    	 <div data-role="main" class="ui-content stretto">
 
-			  		<li id="notifica_3" class="table-view-cell notification-list ui-listview">
-			    	 <div data-role="main" class="ui-content">
+	   						 <div class="ui-grid-b">
+	   			 					   <div class="ui-block-a"><span>
+	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+	      								</span></div>
+	   								   <div class="ui-block-b">
+	    										<span class="titolo-notifica">Davide Giancola</span> <br>
+							    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
+									   </div>
+	   								   <div class="ui-block-c">
 
-   						 <div class="ui-grid-b">
-   			 					   <div class="ui-block-a"><span>
-  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
-      								</span></div>
-   								   <div class="ui-block-b">
-    										<span class="titolo-notifica">Davide Giancola</span> <br>
-						    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
-								   </div>
-   								   <div class="ui-block-c">
+				      				  </div>
+	  					     </div>
+	 						 </div>
+				  		</li>
 
-			      				  </div>
-  					     </div>
- 						 </div>
-			  		</li>
+				  		<li id="notifica_4" class="table-view-cell notification-list ui-listview">
+				    	 <div data-role="main" class="ui-content stretto">
 
-			  		<li id="notifica_4" class="table-view-cell notification-list ui-listview">
-			    	 <div data-role="main" class="ui-content">
+	   						 <div class="ui-grid-b">
+	   			 					   <div class="ui-block-a"><span>
+	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+	      								</span></div>
+	   								   <div class="ui-block-b">
+	    										<span class="titolo-notifica">Davide Giancola</span> <br>
+							    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
+									   </div>
+	   								   <div class="ui-block-c">
 
-   						 <div class="ui-grid-b">
-   			 					   <div class="ui-block-a"><span>
-  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
-      								</span></div>
-   								   <div class="ui-block-b">
-    										<span class="titolo-notifica">Davide Giancola</span> <br>
-						    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
-								   </div>
-   								   <div class="ui-block-c">
+				      				  </div>
+	  					     </div>
+	 						 </div>
+				  		</li>
 
-			      				  </div>
-  					     </div>
- 						 </div>
-			  		</li>
+				  		<li id="notifica_5" class="table-view-cell notification-list ui-listview">
+				    	 <div data-role="main" class="ui-content stretto">
 
-			  		<li id="notifica_5" class="table-view-cell notification-list ui-listview">
-			    	 <div data-role="main" class="ui-content">
+	   						 <div class="ui-grid-b">
+	   			 					   <div class="ui-block-a"><span>
+	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+	      								</span></div>
+	   								   <div class="ui-block-b">
+	    										<span class="titolo-notifica">Davide Giancola</span> <br>
+							    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
+									   </div>
+	   								   <div class="ui-block-c">
 
-   						 <div class="ui-grid-b">
-   			 					   <div class="ui-block-a"><span>
-  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
-      								</span></div>
-   								   <div class="ui-block-b">
-    										<span class="titolo-notifica">Davide Giancola</span> <br>
-						    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
-								   </div>
-   								   <div class="ui-block-c">
+				      				  </div>
+	  					     </div>
+	 						 </div>
+				  		</li>
 
-			      				  </div>
-  					     </div>
- 						 </div>
-			  		</li>
+				  		<li id="notifica_6" class="table-view-cell notification-list ui-listview">
+				    	 <div data-role="main" class="ui-content stretto">
 
-			  		<li id="notifica_6" class="table-view-cell notification-list ui-listview">
-			    	 <div data-role="main" class="ui-content">
+	   						 <div class="ui-grid-b">
+	   			 					   <div class="ui-block-a"><span>
+	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+	      								</span></div>
+	   								   <div class="ui-block-b">
+	    										<span class="titolo-notifica">Davide Giancola</span> <br>
+							    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
+									   </div>
+	   								   <div class="ui-block-c">
 
-   						 <div class="ui-grid-b">
-   			 					   <div class="ui-block-a"><span>
-  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
-      								</span></div>
-   								   <div class="ui-block-b">
-    										<span class="titolo-notifica">Davide Giancola</span> <br>
-						    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
-								   </div>
-   								   <div class="ui-block-c">
+				      				  </div>
+	  					     </div>
+	 						 </div>
+				  		</li>
 
-			      				  </div>
-  					     </div>
- 						 </div>
-			  		</li>
 	  			</ul>
-			</div>
 			<link href="css/gestione_notifiche.css" rel="stylesheet">
 		</div>
 
@@ -194,6 +192,7 @@
 			</nav>
 		<script src="libs/SlipJs/slip.js"></script>
 <script src="js/gestione_notifiche.js"></script>
+
 
   	</body>
 </html>
