--- a/www/selezionaAvvistamento.html
+++ b/www/selezionaAvvistamento.html
@@ -39,63 +39,55 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<h2 id="titleNavigation">Seleziona Professori</h2>
+		<h1 id= "titleNavigation" class="titleNavigation">Scegli chi segnalare</h1>
 		</header>
 
-		<div id="contentmain" class="content snap-content">
-			<div class="card">
-	  			<ul class="table-view">
-	    			<li class="table-view-cell table-view-divider">Professori</li>
 
-	    			<li class="table-view-cell media">
-			    		<a class="navigate-right" data-ignore="push" data-transition="slide" href="selezionaProfPosizione.html">
-				      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
-							<div class="media-body">Costanzo Manes</div>
-							<div>
-						        <span class="labelCard">Status: </span>
-								<span class="textCard">A lezione</span>
-					      	</div>
-			    		</a>
-			  		</li>
-	    			<li class="table-view-cell media">
-			    		<a class="navigate-right">
-				      		<img class="media-object pull-left cardImage" src="img/pepe.jpg">
-							<div class="media-body">Pierdomenico Pepe</div>
-							<div>
-						        <span class="labelCard">Status: </span>
-								<span class="textCard">A lezione</span>
-					      	</div>
-			    		</a>
-			  		</li>
-	  			</ul>
+			<div class="filter bar bar-standard bar-header-secondary">
+				<div class="segmented-control">
+				    <a id="followerAmici" class="control-item active">Amici</a>
+				    <a id="followerProf" class="control-item">Professori</a>
+		  		</div>
+			</div>
+
+			<!-- Lista follower Amici -->
+			<div id="filtrofollower" class="content">
+			<div id="lista">
+
+			<script src="js/filtroSparaFollower.js"></script>
+			<link href="css/followers.css" rel="stylesheet">
+
 			</div>
 		</div>
-		<!-- Tab Bar -->
+
 		<nav class="bar bar-tab">
-	  			<a class="tab-item active " data-ignore="push" href="index.html">
+	  			<a class="tab-item"  href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
-				<a class="tab-item " data-ignore="push" href="cambiaStatus.html">
+				<a class="tab-item"  href="cambiaStatus.html">
 					<span class="icon icon-compose"></span>
 				</a>
 
-				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
+				<a class="tab-item"  href="gestione_notifiche.html">
 					<span class="media-object">
 						<img src="img/notifiche.png" class="followersImage">
 					</span>
 				</a>
-				<a class="tab-item tab-item-selected" data-ignore="push" href="listaFollowers.html">
+				<a class="tab-item"  href="listaFollowers.html">
 					<span class="media-object">
 						<img src="img/followers.png" class="followersImage">
 					</span>
 				</a>
-				<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
+				<a class="tab-item tab-item-selected"  href="selezionaAvvistamento.html">
 					<span class="media-object">
 						<img src="img/profMirino.png" class="followersImage">
 					</span>
 				</a>
 			</nav>
+	</body>
+		<!-- Tab Bar -->
 
-  	</body>
+
+
 
 </html>
