--- a/www/FollowerAmiciSpara.html
+++ b/www/FollowerAmiciSpara.html
@@ -3,11 +3,10 @@
 	  			<ul class="table-view">
 	    			<li class="table-view-cell table-view-divider">Amici</li>
 	  				<li class="table-view-cell media">
-	    				<a  data-ignore="push" data-transition="slide" href="selezionaAvvistamento.html">
+	    				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="selezionaPosizioneAvvistamento.html">
 		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 			      			<div class="media-body">Matteo Polsinelli</div>
 							<div>
-
 								<span class="textCard">A lezione</span>
 			      			</div>
 	    				</a>
@@ -27,7 +26,6 @@
 		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 			      			<div class="media-body">Matteo Polsinelli</div>
 							<div>
-
 								<span class="textCard">A lezione</span>
 			      			</div>
 	    				</a>
