--- a/www/FollowerProfSpara.html
+++ b/www/FollowerProfSpara.html
@@ -2,13 +2,11 @@
 
 	  			<ul class="table-view">
 	    			<li class="table-view-cell table-view-divider">Professori</li>
-
 	    			<li class="table-view-cell media">
-			    		<a class="navigate-right" data-ignore="push" data-transition="slide" href="selezionaAvvistamento.html">
+			    		<a class="navigate-right" data-ignore="push" data-transition="slide" href="selezionaPosizioneAvvistamento.html">
 				      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
 							<div class="media-body">Costanzo Manes</div>
 							<div>
-						        <span class="labelCard">Status: </span>
 								<span class="textCard">A lezione</span>
 					      	</div>
 			    		</a>
@@ -18,7 +16,6 @@
 				      		<img class="media-object pull-left cardImage" src="img/pepe.jpg">
 							<div class="media-body">Pierdomenico Pepe</div>
 							<div>
-						        <span class="labelCard">Status: </span>
 								<span class="textCard">A lezione</span>
 					      	</div>
 			    		</a>
@@ -28,7 +25,6 @@
 				      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
 							<div class="media-body">Costanzo Manes</div>
 							<div>
-						        <span class="labelCard">Status: </span>
 								<span class="textCard">A lezione</span>
 					      	</div>
 			    		</a>
@@ -38,7 +34,6 @@
 				      		<img class="media-object pull-left cardImage" src="img/pepe.jpg">
 							<div class="media-body">Pierdomenico Pepe</div>
 							<div>
-						        <span class="labelCard">Status: </span>
 								<span class="textCard">A lezione</span>
 					      	</div>
 			    		</a>
