--- a/www/listaFollowers.html
+++ b/www/listaFollowers.html
@@ -77,7 +77,7 @@
 						<img src="img/followers.png" class="followersImage">
 					</span>
 				</a>
-				<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
+				<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
 					<span class="media-object">
 						<img src="img/profMirino.png" class="followersImage">
 					</span>
