--- a/www/gestisciPrivacy.html
+++ b/www/gestisciPrivacy.html
@@ -37,7 +37,7 @@
 		<!-- Title bar -->
 		<header class="bar bar-nav">
 		<a id="freccia_indietro" href="profile.html" data-ignore="push" data-transition="slide" data-direction="reverse" class="icon icon-left-nav pull-left"></a>
-  			
+
   			<h2 class="title">Gestione Privacy</h2>
 		</header>
 
@@ -107,6 +107,13 @@
 
 					<li class="table-view-cell">
 						Corsi seguiti
+						<div class="toggle">
+							<div class="toggle-handle"></div>
+						</div>
+					</li>
+
+					<li class="table-view-cell">
+						Permetti la segnalazione della tua posizione
 						<div class="toggle">
 							<div class="toggle-handle"></div>
 						</div>
