--- a/www/FollowerAmici.html
+++ b/www/FollowerAmici.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 	  			<ul class="table-view">
-	    			<li class="table-view-cell table-view-divider">Amici</li>
+	    			<li class="table-view-cell table-view-divider">Amici - vicino a me</li>
 	  				<li class="table-view-cell media">
 	    				<a href="profile_visitato.html" data-ignore="push" data-transition="slide" class="navigate-right frecciaProfilo stretto">
 		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
@@ -43,6 +43,3 @@
 			    		</a>
 			  		</li>
 	  			</ul>
-
-			
-			
