--- a/www/FollowerAmiciSpara.html
+++ b/www/FollowerAmiciSpara.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 	  			<ul class="table-view">
-	    			<li class="table-view-cell table-view-divider">Amici</li>
+	    			<li class="table-view-cell table-view-divider">Amici - vicino a me</li>
 	  				<li class="table-view-cell media">
 	    				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="selezionaPosizioneAvvistamento.html">
 		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
