--- a/www/FollowerProf.html
+++ b/www/FollowerProf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 	  			<ul class="table-view">
-	    			<li class="table-view-cell table-view-divider">Professori</li>
+	    			<li class="table-view-cell table-view-divider">Professori - ordine alfabetico</li>
 
 	    			<li class="table-view-cell media">
 			    		<a class="navigate-right" data-ignore="push" data-transition="slide" href="profile_prof_visitato.html">
@@ -44,4 +44,3 @@
 			    		</a>
 			  		</li>
 	  			</ul>
-
