--- a/www/FollowerProfSpara.html
+++ b/www/FollowerProfSpara.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 	  			<ul class="table-view">
-	    			<li class="table-view-cell table-view-divider">Professori</li>
+	    			<li class="table-view-cell table-view-divider">Professori - alfabetico</li>
 	    			<li class="table-view-cell media">
 			    		<a class="navigate-right" data-ignore="push" data-transition="slide" href="selezionaPosizioneAvvistamento.html">
 				      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
