--- a/www/index.html
+++ b/www/index.html
@@ -60,8 +60,12 @@
 		<header class="bar bar-nav">
 			<a id="freccia_indietro" class="icon icon-left-nav pull-left"></a>
 			<a id="menu_btn" class="icon icon-bars pull-left"></a>
+			<a class="icon pull-right iconSpara" data-ignore="push" href="selezionaAvvistamento.html">
+				<span class="media-object pull-right">
+					<img src="img/profMirino.png" class="followersImage">
+				</span>
+			</a>
 			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
-
   			<h2 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h2>
 		</header>
 
@@ -151,6 +155,13 @@
 	  			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
+
+				<a class="tab-item" data-ignore="push" href="#">
+					<span class="media-object">
+						<img src="img/launchpad.png" class="followersImage">
+					</span>
+				</a>
+
 				<a class="tab-item" data-ignore="push" href="widgets.html">
 					<span class="icon icon-compose"></span>
 				</a>
@@ -165,11 +176,7 @@
 						<img src="img/followers.png" class="followersImage">
 					</span>
 				</a>
-				<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
-					<span class="media-object">
-						<img src="img/profMirino.png" class="followersImage">
-					</span>
-				</a>
+
 			</nav>
 			<link href="css/widgets.css" rel="stylesheet">
 
