--- a/www/selezionaAvvistamento.html
+++ b/www/selezionaAvvistamento.html
@@ -39,7 +39,8 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-		<h1 id= "titleNavigation" class="titleNavigation">Scegli chi segnalare</h1>
+			<a class="icon icon-left-nav pull-left" href="index.html"></a>
+			<h1 id= "titleNavigation" class="titleNavigation">Scegli chi segnalare</h1>
 		</header>
 
 
