--- a/www/selezionaAvvistamento.html
+++ b/www/selezionaAvvistamento.html
@@ -39,7 +39,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<a class="icon icon-left-nav pull-left" href="index.html"></a>
+			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" href="index.html"></a>
 			<h1 id= "titleNavigation" class="titleNavigation">Scegli chi segnalare</h1>
 		</header>
 
