--- a/www/index.html
+++ b/www/index.html
@@ -162,7 +162,7 @@
 					</span>
 				</a>
 
-				<a class="tab-item" data-ignore="push" href="widgets.html">
+				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
 					<span class="icon icon-compose"></span>
 				</a>
 
