--- a/www/listaFollowers.html
+++ b/www/listaFollowers.html
@@ -86,6 +86,13 @@
 	  			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
+
+				<a class="tab-item" data-ignore="push" href="index.html">
+					<span class="media-object">
+						<img src="img/launchpad.png" class="followersImage">
+					</span>
+				</a>
+
 				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
 					<span class="icon icon-compose"></span>
 				</a>
@@ -100,11 +107,7 @@
 						<img src="img/followers.png" class="followersImage">
 					</span>
 				</a>
-				<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
-					<span class="media-object">
-						<img src="img/profMirino.png" class="followersImage">
-					</span>
-				</a>
+
 			</nav>
 
 
