--- a/www/lista_poli_per_gestione.html
+++ b/www/lista_poli_per_gestione.html
@@ -39,7 +39,8 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			
+			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" href="index.html"></a>
+
   			<h2 id="titleNavigation">Gestione Poli</h2>
 		</header>
 
