--- a/www/profile.html
+++ b/www/profile.html
@@ -18,7 +18,7 @@
 		<link href="libs/jquery.mobile.custom/jquery.mobile.custom.structure.min.css" rel="stylesheet">
 		<link href="libs/jquery.mobile.custom/jquery.mobile.custom.theme.min.css" rel="stylesheet">
 <link href="css/profile.css" rel="stylesheet">
-	
+
 
     	<!-- Include the compiled Ratchet JS -->
     	<script src="libs/ratchet-v2.0.2/js/ratchet.js"></script>
@@ -37,6 +37,8 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
+			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" href="index.html"></a>
+
 		 <h1 class="title">Matteo Polsinelli</h1>
 		</header>
 
@@ -128,8 +130,8 @@
 
 					</li>
 				</ul>
-				
-					
+
+
 			</div>
 			<nav class="bar bar-tab">
 	  			<a class="tab-item active " data-ignore="push" href="index.html">
@@ -155,7 +157,7 @@
 					</span>
 				</a>
 			</nav>
-			
+
   	</body>
 
 
