--- a/www/selezionaAvvistamento.html
+++ b/www/selezionaAvvistamento.html
@@ -39,6 +39,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
+			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" href="index.html"></a>
 			<h1 id= "titleNavigation" class="titleNavigation">Scegli chi segnalare</h1>
 		</header>
 
@@ -59,31 +60,6 @@
 
 			</div>
 		</div>
-
-		<nav class="bar bar-tab">
-	  			<a class="tab-item"  href="index.html">
-	    			<span class="icon icon-home"></span>
-	  			</a>
-				<a class="tab-item"  href="cambiaStatus.html">
-					<span class="icon icon-compose"></span>
-				</a>
-
-				<a class="tab-item"  href="gestione_notifiche.html">
-					<span class="media-object">
-						<img src="img/notifiche.png" class="followersImage">
-					</span>
-				</a>
-				<a class="tab-item"  href="listaFollowers.html">
-					<span class="media-object">
-						<img src="img/followers.png" class="followersImage">
-					</span>
-				</a>
-				<a class="tab-item tab-item-selected"  href="selezionaAvvistamento.html">
-					<span class="media-object">
-						<img src="img/profMirino.png" class="followersImage">
-					</span>
-				</a>
-			</nav>
 	</body>
 		<!-- Tab Bar -->
 
