--- a/www/cronologia_notifiche_followers.html
+++ b/www/cronologia_notifiche_followers.html
@@ -73,74 +73,90 @@
 
 				  		<li id="notifica_2" class="table-view-cell notification-list ui-listview">
 				    	 <div data-role="main" class="ui-content stretto">
-
 	   						 <div class="ui-grid-b">
-	   			 					   <div class="ui-block-a"><span>
+	   			 					   <div class="ui-block-a">
+										   <span>
 	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
-	      								</span></div>
+	      									</span>
+										</div>
 	   								   <div class="ui-block-b">
-	    										<span class="titolo-notifica">Davide Giancola</span> <br>
-							    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
+	    										<span class="titolo-notifica">
+												Davide Giancola
+												</span>
+												<span class="testo-notifica">dovrebbe trovarsi in Aula 1.6 di Coppito 1 </span>
 									   </div>
-	   								   <div class="ui-block-c">
-
+	   								   <div class="ui-block-c notifyDiv">
+										   <img src="img/launchpad.png" class="notifyImage">
+										   <span class="testo-notifica">24 minuti fa</span>
 				      				  </div>
-	  					     </div>
+	  					     	</div>
 	 						 </div>
 				  		</li>
 
 				  		<li id="notifica_3" class="table-view-cell notification-list ui-listview">
-				    	 <div data-role="main" class="ui-content stretto">
-
-	   						 <div class="ui-grid-b">
-	   			 					   <div class="ui-block-a"><span>
-	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
-	      								</span></div>
-	   								   <div class="ui-block-b">
-	    										<span class="titolo-notifica">Davide Giancola</span> <br>
-							    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
-									   </div>
-	   								   <div class="ui-block-c">
-
-				      				  </div>
-	  					     </div>
-	 						 </div>
+							<div data-role="main" class="ui-content stretto">
+   	   						 <div class="ui-grid-b">
+   	   			 					   <div class="ui-block-a">
+   										   <span>
+   	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+   	      									</span>
+   										</div>
+   	   								   <div class="ui-block-b">
+   	    										<span class="titolo-notifica">
+   												Davide Giancola
+   												</span>
+   												<span class="testo-notifica">si trova in Aula 1.6 di Coppito 1 </span>
+   									   </div>
+   	   								   <div class="ui-block-c notifyDiv">
+										   <span class="icon icon-check"></span>
+   										   <span class="testo-notifica">1 ora fa</span>
+   				      				  </div>
+   	  					     	</div>
+   	 						 </div>
 				  		</li>
 
 				  		<li id="notifica_4" class="table-view-cell notification-list ui-listview">
-				    	 <div data-role="main" class="ui-content stretto">
-
-	   						 <div class="ui-grid-b">
-	   			 					   <div class="ui-block-a"><span>
-	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
-	      								</span></div>
-	   								   <div class="ui-block-b">
-	    										<span class="titolo-notifica">Davide Giancola</span> <br>
-							    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
-									   </div>
-	   								   <div class="ui-block-c">
-
-				      				  </div>
-	  					     </div>
-	 						 </div>
+							<div data-role="main" class="ui-content stretto">
+   						  <div class="ui-grid-b">
+   									<div class="ui-block-a">
+   										<span>
+   										 <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+   										 </span>
+   									 </div>
+   									<div class="ui-block-b">
+   											 <span class="titolo-notifica">
+   											 Davide Giancola
+   											 </span>
+   											 <span class="testo-notifica">è stato visto a Coppito 1 al terzo piano </span>
+   									</div>
+   									<div class="ui-block-c notifyDiv">
+										<img src="img/1persona.png" class="notifyImage">
+   										<span class="testo-notifica">18 ora fa</span>
+   								   </div>
+   							 </div>
+   						  </div>
 				  		</li>
 
 				  		<li id="notifica_5" class="table-view-cell notification-list ui-listview">
-				    	 <div data-role="main" class="ui-content stretto">
-
-	   						 <div class="ui-grid-b">
-	   			 					   <div class="ui-block-a"><span>
-	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
-	      								</span></div>
-	   								   <div class="ui-block-b">
-	    										<span class="titolo-notifica">Davide Giancola</span> <br>
-							    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
-									   </div>
-	   								   <div class="ui-block-c">
-
-				      				  </div>
-	  					     </div>
-	 						 </div>
+							<div data-role="main" class="ui-content stretto">
+   						  <div class="ui-grid-b">
+   									<div class="ui-block-a">
+   										<span>
+   										 <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+   										 </span>
+   									 </div>
+   									<div class="ui-block-b">
+   											 <span class="titolo-notifica">
+   											 Davide Giancola
+   											 </span>
+   											 <span class="testo-notifica">è stato visto a Coppito 1 al terzo piano </span>
+   									</div>
+   									<div class="ui-block-c notifyDiv">
+										<img src="img/3persone.png" class="notifyImage">
+   										<span class="testo-notifica">3 giorni fa</span>
+   								   </div>
+   							 </div>
+   						  </div>
 				  		</li>
 
 				  		<li id="notifica_6" class="table-view-cell notification-list ui-listview">
