--- a/www/cronologia_notifiche_followers.html
+++ b/www/cronologia_notifiche_followers.html
@@ -108,7 +108,7 @@
    												<span class="testo-notifica">si trova in Aula 1.6 di Coppito 1 </span>
    									   </div>
    	   								   <div class="ui-block-c notifyDiv">
-										   <span class="icon icon-check"></span>
+										   <img src="img/check.png" class="notifyImage">
    										   <span class="testo-notifica">1 ora fa</span>
    				      				  </div>
    	  					     	</div>
