--- a/www/cronologia_notifiche_followers.html
+++ b/www/cronologia_notifiche_followers.html
@@ -54,7 +54,7 @@
 
 	   						 <div class="ui-grid-b">
 	   			 					   <div class="ui-block-a ui-block-a-button immNotifica"><span>
-	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/matteo.jpg">
+	  									    <img class="media-object pull-left cardImage notifyImage" src="img/matteo.jpg">
 	      								</span></div>
 	   								   <div class="ui-block-b ui-block-b-button">
 	    									  <span class="titolo-notifica">Matteo Polsinelli </span> <br>
@@ -76,7 +76,7 @@
 	   						 <div class="ui-grid-b">
 	   			 					   <div class="ui-block-a">
 										   <span>
-	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+	  									    <img class="media-object pull-left cardImage Imagefullwidth notifyImage" src="img/davide.jpg">
 	      									</span>
 										</div>
 	   								   <div class="ui-block-b">
@@ -86,7 +86,7 @@
 												<span class="testo-notifica">dovrebbe trovarsi in Aula 1.6 di Coppito 1 </span>
 									   </div>
 	   								   <div class="ui-block-c notifyDiv">
-										   <img src="img/launchpad.png" class="notifyImage">
+										   <img src="img/launchpad.png" class="notifyIcon">
 										   <span class="testo-notifica">24 minuti fa</span>
 				      				  </div>
 	  					     	</div>
@@ -98,17 +98,17 @@
    	   						 <div class="ui-grid-b">
    	   			 					   <div class="ui-block-a">
    										   <span>
-   	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+   	  									    <img class="media-object pull-left cardImage Imagefullwidth notifyImage" src="img/davide.jpg">
    	      									</span>
    										</div>
    	   								   <div class="ui-block-b">
    	    										<span class="titolo-notifica">
    												Davide Giancola
    												</span>
-   												<span class="testo-notifica">si trova in Aula 1.6 di Coppito 1 </span>
+   												<span class="testo-notifica">si è registrato nell' Aula 1.6 di Coppito 1 </span>
    									   </div>
    	   								   <div class="ui-block-c notifyDiv">
-										   <img src="img/check.png" class="notifyImage">
+										   <img src="img/check.png" class="notifyIcon">
    										   <span class="testo-notifica">1 ora fa</span>
    				      				  </div>
    	  					     	</div>
@@ -120,7 +120,7 @@
    						  <div class="ui-grid-b">
    									<div class="ui-block-a">
    										<span>
-   										 <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+   										 <img class="media-object pull-left cardImage Imagefullwidth notifyImage" src="img/davide.jpg">
    										 </span>
    									 </div>
    									<div class="ui-block-b">
@@ -130,7 +130,7 @@
    											 <span class="testo-notifica">è stato visto a Coppito 1 al terzo piano </span>
    									</div>
    									<div class="ui-block-c notifyDiv">
-										<img src="img/1persona.png" class="notifyImage">
+										<img src="img/1persona.png" class="notifyIcon">
    										<span class="testo-notifica">18 ora fa</span>
    								   </div>
    							 </div>
@@ -142,39 +142,21 @@
    						  <div class="ui-grid-b">
    									<div class="ui-block-a">
    										<span>
-   										 <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
+   										 <img class="media-object pull-left cardImage Imagefullwidth notifyImage" src="img/davide.jpg">
    										 </span>
    									 </div>
    									<div class="ui-block-b">
    											 <span class="titolo-notifica">
    											 Davide Giancola
    											 </span>
-   											 <span class="testo-notifica">è stato visto a Coppito 1 al terzo piano </span>
+   											 <span class="testo-notifica">hanno visto a Coppito 1 al terzo piano </span>
    									</div>
    									<div class="ui-block-c notifyDiv">
-										<img src="img/3persone.png" class="notifyImage">
+										<img src="img/3persone.png" class="notifyIcon">
    										<span class="testo-notifica">3 giorni fa</span>
    								   </div>
    							 </div>
    						  </div>
-				  		</li>
-
-				  		<li id="notifica_6" class="table-view-cell notification-list ui-listview">
-				    	 <div data-role="main" class="ui-content stretto">
-
-	   						 <div class="ui-grid-b">
-	   			 					   <div class="ui-block-a"><span>
-	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
-	      								</span></div>
-	   								   <div class="ui-block-b">
-	    										<span class="titolo-notifica">Davide Giancola</span> <br>
-							    			    <span class="testo-notifica">E' Appena entrato in Aula 1.6 di Coppito 1 </span>
-									   </div>
-	   								   <div class="ui-block-c">
-
-				      				  </div>
-	  					     </div>
-	 						 </div>
 				  		</li>
 
 	  			</ul>
