--- a/www/cronologia_notifiche_followers.html
+++ b/www/cronologia_notifiche_followers.html
@@ -149,7 +149,7 @@
    											 <span class="titolo-notifica">
    											 Davide Giancola
    											 </span>
-   											 <span class="testo-notifica">hanno visto a Coppito 1 al terzo piano </span>
+   											 <span class="testo-notifica">è stato visto a Coppito 1 al terzo piano </span>
    									</div>
    									<div class="ui-block-c notifyDiv">
 										<img src="img/3persone.png" class="notifyIcon">
