--- a/www/index.html
+++ b/www/index.html
@@ -152,11 +152,11 @@
 
 
 			<nav class="bar bar-tab">
-	  			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
+	  			<a class="tab-item active tab-item-selected" data-ignore="push" href="widgets.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
 
-				<a class="tab-item" data-ignore="push" href="#">
+				<a class="tab-item" data-ignore="push" href="index.html">
 					<span class="media-object">
 						<img src="img/launchpad.png" class="followersImage">
 					</span>
