addio Status: in prof

--- a/www/FollowerAmici.html
+++ b/www/FollowerAmici.html
@@ -3,7 +3,7 @@
 	  			<ul class="table-view">
 	    			<li class="table-view-cell table-view-divider">Amici - vicino a me</li>
 	  				<li class="table-view-cell media">
-	    				<a href="profile_visitato.html" data-ignore="push" data-transition="slide" class="navigate-right frecciaProfilo stretto">
+	    				<a href="profile_visitato.html" data-ignore="push" data-transition="slide" class="navigate-right frecciaProfilo ">
 		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 			      			<div class="media-body">Matteo Polsinelli</div>
 							<div>
@@ -13,7 +13,7 @@
 	    				</a>
 	  				</li>
 			  		<li class="table-view-cell media">
-			    		<a class="navigate-right stretto">
+			    		<a class="navigate-right ">
 				      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
 							<div class="media-body">Davide Giancola</div>
 							<div>
@@ -23,7 +23,7 @@
 			    		</a>
 			  		</li>
 			  		<li class="table-view-cell media">
-	    				<a class="navigate-right frecciaProfilo stretto">
+	    				<a class="navigate-right frecciaProfilo ">
 		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 			      			<div class="media-body">Matteo Polsinelli</div>
 							<div>
@@ -33,7 +33,7 @@
 	    				</a>
 	  				</li>
 			  		<li class="table-view-cell media">
-			    		<a class="navigate-right stretto">
+			    		<a class="navigate-right ">
 				      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
 							<div class="media-body">Davide Giancola</div>
 							<div>
