--- a/www/profile_prof_visitato_from_ricerca.html
+++ b/www/profile_prof_visitato_from_ricerca.html
@@ -72,19 +72,21 @@
 					  	<ul class="table-view pulito ">
 							<li class="table-view-cell pulito">
 							    <a>
-							      <span class="media-object pull-left icon icon-gear"></span>
+							      <span class="media-object pull-left icon icon-compose"></span>
 							      <div class="media-body">
-							        Stato Corrente: a lezione
+							        A lezione
 							      </div>
 							     </a>
 							</li>
 					</a>
 					<a>
 							<li class="table-view-cell pulito">
-						    	<span class="media-object pull-left icon icon-pages"></span>
-						      	<div class="media-body">
+						    	<span class="media-object">
+						    		<img class="media-object widgeticon" src="img/position.png">
+						    	</span>
+						      	<span class="media-body">
 						        Posizione: coppito-blocco 1-piano 2
-					      		</div>
+					      		</span>
 							</li>
 					</a>
 	
