--- a/www/profile_prof_visitato.html
+++ b/www/profile_prof_visitato.html
@@ -48,6 +48,7 @@
 					<img class="imageProfile profilo-image" src="img/manes.jpg">
 
 					<span class="media-object pull-left "><img class="email-icon" src="./img/email-icon.png"></span>
+					<span class="media-body">
 					<div class="media-body email-text">
 						E-mail:  costanto.manes@univaq.it
 					</div>
@@ -63,6 +64,7 @@
 					<div class="media-body email-text">
 						Polo di riferimento: Coppito
 					</div>
+					</span>
 				</li>
 			
 			</ul>
@@ -72,19 +74,21 @@
 					  	<ul class="table-view pulito ">
 							<li class="table-view-cell pulito">
 							    <a>
-							      <span class="media-object pull-left icon icon-gear"></span>
+							      <span class="media-object pull-left icon icon-compose"></span>
 							      <div class="media-body">
-							        Stato Corrente: a lezione
+							        A lezione
 							      </div>
 							     </a>
 							</li>
 					</a>
 					<a>
 							<li class="table-view-cell pulito">
-						    	<span class="media-object pull-left icon icon-pages"></span>
-						      	<div class="media-body">
+								<span class="media-object">
+						    		<img class="media-object widgeticon" src="img/position.png">
+						    	</span>
+						      	<span class="media-body">
 						        Posizione: coppito-blocco 1-piano 2
-					      		</div>
+					      		</span>
 							</li>
 					</a>
 	
