Sparato alla prof

--- a/www/FollowerProfSpara.html
+++ b/www/FollowerProfSpara.html
@@ -21,12 +21,21 @@
 			    		</a>
 			  		</li>
 			  		<li class="table-view-cell media">
-			    		<a class="navigate-right">
-				      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
-							<div class="media-body">Costanzo Manes</div>
-							<div>
-								<span class="textCard">A lezione</span>
-					      	</div>
+			    		<a>
+			    			<span class="media-object pull-left">
+				      			<img class="media-object pull-left cardImage" src="img/tarantino.jpg">
+								<span class="media-body">Laura Tarantino</span>
+								<div>
+									<span class="textCard">A Ricevimento</span>
+					      		</div>
+					      	</span>
+					      	<span class="media-object ">
+						    		<img class="media-object  icona" src="img/profMirino.png">
+					      	</span>
+					      	<span class="media-body pull-right">
+						        	Avvistata
+					      	</span>
+
 			    		</a>
 			  		</li>
 	    			<li class="table-view-cell media">
@@ -39,3 +48,4 @@
 			    		</a>
 			  		</li>
 	  			</ul>
+	  			<link href="css/followers.css" rel="stylesheet">
