--- a/www/gestisciPrivacy.html
+++ b/www/gestisciPrivacy.html
@@ -41,11 +41,11 @@
   			<h2 class="title">Gestione Privacy</h2>
 		</header>
 
-		<div class="content">
+		<div class="content spazio-nav">
 			<div class="card">
 				<ul class="table-view">
 					<li class="table-view-cell table-view-divider">
-					    Status
+					    Status per i quali i follower possono scegliere di essere notificati
 					</li>
 
 					<li class="table-view-cell">
@@ -88,7 +88,7 @@
 			<div class="card">
 				<ul class="table-view">
 					<li class="table-view-cell table-view-divider">
-					    Altre informazioni
+					    Rendi visibile ai follower
 					</li>
 
 					<li class="table-view-cell">
@@ -111,7 +111,10 @@
 							<div class="toggle-handle"></div>
 						</div>
 					</li>
-
+				</ul>
+			</div>
+			<div class="card">
+				<ul class="table-view">
 					<li class="table-view-cell">
 						Permetti la segnalazione della tua posizione
 						<div class="toggle">
@@ -121,13 +124,14 @@
 
 				</ul>
 			</div>
+
 		</div>
 
 		<nav class="bar bar-tab">
 	  			<a class="tab-item active " data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
-				<a class="tab-item tab-item-selected" data-ignore="push" href="profile.html">
+				<a class="tab-item" data-ignore="push" href="profile.html">
 					<span class="icon icon-compose"></span>
 				</a>
 
