--- a/www/FollowerAmiciSpara.html
+++ b/www/FollowerAmiciSpara.html
@@ -12,7 +12,7 @@
 	    				</a>
 	  				</li>
 			  		<li class="table-view-cell media">
-			    		<a class="navigate-right stretto">
+			    		<a class="navigate-right">
 				      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
 							<div class="media-body">Davide Giancola</div>
 							<div>
@@ -22,7 +22,7 @@
 			    		</a>
 			  		</li>
 			  		<li class="table-view-cell media">
-	    				<a class="navigate-right frecciaSpara stretto">
+	    				<a class="navigate-right frecciaSpara ">
 		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 			      			<div class="media-body">Matteo Polsinelli</div>
 							<div>
@@ -31,7 +31,7 @@
 	    				</a>
 	  				</li>
 			  		<li class="table-view-cell media">
-			    		<a class="navigate-right stretto">
+			    		<a class="navigate-right ">
 				      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
 							<div class="media-body">Davide Giancola</div>
 							<div>
