--- a/www/profile_visitato_from_navigation.html
+++ b/www/profile_visitato_from_navigation.html
@@ -18,19 +18,21 @@
 					  	<ul class="table-view pulito ">
 						<li class="table-view-cell pulito">
 					    <a>  
-					      <span class="media-object pull-left icon icon-gear"></span>
+					      <span class="media-object pull-left icon icon-compose"></span>
 					      <div class="media-body">
-					        Stato Corrente: a lezione
+					        A lezione
 					      </div>
 						</a>
 						</li>
 
 						<li class="table-view-cell pulito">
 					    <a>
-					    	<span class="media-object pull-left icon icon-pages"></span>
-					      	<div class="media-body">
+					    	<span class="media-object">
+					    		<img class="media-object widgeticon" src="img/position.png">
+					    	</span>
+					      	<span class="media-body">
 					        Posizione: coppito-blocco 1-piano 2
-					      	</div>
+					      	</span>
 						</a>
 						</li>
 						</ul>
@@ -45,7 +47,7 @@
 					     </a> 	
 						 </li>
 						 <li class="table-view-cell pulito">
-							<a class="navigate-right"  href="#" data-transition="slide">
+							<a class="navigate-right"  href="corsiProfiloVisitato.html" data-transition="slide">
 						    	<span class="media-object pull-left icon icon-pages"></span>
 						      	<div class="media-body">
 						        Corsi seguiti
